examples/test/testpolicy731.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy731
  namespace: namespace177
spec:
  podSelector:
    matchLabels:
      key19: value49
      key32: value17
      key38: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value18
      podSelector:
        matchLabels:
          key21: value42
